--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     
         <div class="main__info">
-            <div class="info">Привет! Это все ссылки на всё что можно. Тыкай на все что тыкается</div>
+            <div class="info">Привет! Это все ссылки на всё что можно. Тыкай на всё что тыкается</div>
         </div>
 
         <div class="links">
