--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 
         <div class="links">
             <div class="main__blocks">
+                <a class="link" href="https://www.donationalerts.com/r/last_ntp" target="_blank">
+                    <div class="block__link">
+                        <div class="link__text">Донат</div>
+                    </div>
+                </a>
+                
                 <a class="link" href="https://www.youtube.com/@last_ntp" target="_blank">
                     <div class="block__link">
                         <div class="link__text">YouTube</div>
